--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,3 +1,4 @@
+book_filename: "finalproj"
 output_dir: docs
 delete_merged_file: true
 edit: https://github.com/mdlngeorges/colonization/edit/master/%s
